2008-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man: Extended graphs with the ability to define arc
	* graph.tcl: weights. Added methods to query and manipulate weight
	* graph_tcl.tcl: information. Extended the serialization format to
	* pkgIndex.tcl: handle graphs with and without arc weights.
	* graph/arc.c: Implemented in both Tcl and C. The Tcl code is
	* graph/ds.h: derived from Alejandro Paz's ( <vidriloco@gmail.com>)
	* graph/methods.c: work during GSoC 2008. Extended testsuite and
	* graph/methods.h: documentation. The package now requires Tcl 8.4
	* graph/objcmd.c: for operation. Bumped the package version to 2.3.
	* graph/tests/Xcontrol:
	* graph/tests/arc/getunweighted.test: 
	* graph/tests/arc/getweight.test: 
	* graph/tests/arc/hasweight.test:
	* graph/tests/arc/setunweighted.test:
	* graph/tests/arc/setweight.test:
	* graph/tests/arc/unsetweight.test:
	* graph/tests/arc/weights.test:
	* graph/tests/command.test:
	* graph/tests/deserialize.test:
	* graph/tests/serialize.test:
	* graph/tests/Xsupport:

2008-09-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* disjointset.man: Added a modified form of the disjoint-set class
	* disjointset.tcl: created by  Alejandro Paz <vidriloco@gmail.com>
	* disjointset.test: for the Google Summer Of Code 2008. Version 1.0.
	* disjointset.testsuite: 
	* pkgIndex.tcl:

2008-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* prioqueue.man: Extended with a 'remove' method for the
	* prioqueue.tcl: deletion of items from queues before their
	* prioqueue.test: time comes up with 'get'. Bumped version
	* pkgIndex.tcl: to 1.4. Code originally by Alejandro Paz
	  <vidriloco@gmail.com> for GSoC 2008, with modifications by
	  myself to make the item search more efficient.

2008-09-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.testsuite: Updated tests based on walk error stack traces
	  to handle new differences between 8.4 and 8.5.
